# typing.hs

./: .gitpod.yml  README.md  ghci.json  stack.yaml  typing.cabal
src/: Main.hs
src/HsTyping/: Shim.hs
src/PoC/: Animal.hs  ConcState.hs  DynPoly.hs  Existential.hs  Floating.hs
src/Ref/: Surreal.hs
