cabal-version:      2.4
name:               typing
version:            0.1.0.0
license:            BSD-3-Clause
author:             ComplYue
maintainer:         compl.yue@icloud.com
build-type:         Simple
extra-source-files: README.md

executable typing.hs
  main-is:            Main.hs
  other-modules:      PoC.Existential
  build-depends:      base >=4.12 && <5
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns
